G/tests/fail/div_zero.g
fn main() -> int {
    let x = 10 / 0
    return 0
}
